kycsite/source/stylesheets/_partials/_base.css.scss
/*
* Skeleton V1.2
* Copyright 2011, Dave Gamache
* www.getskeleton.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 6/20/2012
*/

/* #Reset & Basics (Inspired by E. Meyers)
================================================== */
	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
		margin: 0;
		padding: 0;
		border: 0;
		font-size: 100%;
		font: inherit;
		vertical-align: baseline; }
	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
		display: block; }
	body {
		line-height: 1; }
	blockquote, q {
		quotes: none; }
	blockquote:before, blockquote:after,
	q:before, q:after {
		content: '';
		content: none; }
	table {
		border-collapse: collapse;
		border-spacing: 0; }


/* #Headers
================================================== */
	h1, h2, h3, h5 {
		font-family:'Arvo',Georgia,Serif;
		font-weight: 700;	
	}
	
	h4, h6 {
		font-family:'Arvo',Georgia,Serif;
		font-weight: 400;
	}
	
	h1 {
		font-size: 4.4em;
		line-height: 1.25em;
		
		 @include breakpoint($mobile-portrait) {
			 font-size:2.8em;
		}
	}
	
	h2 {
		font-size: 3.75em;
		margin-bottom: .25em;
		
		@include breakpoint($mobile-portrait) {
			 font-size:2.6em;
		}
	}	
	
	h3 {
		font-size: 2.8em;
		margin-bottom: .5em;
		
		@include breakpoint($mobile-portrait) {
			 font-size:1.9em;
		}
	}

	h4 {
		font-size: 1.57em;
		margin-top: 1em;
		
		@include breakpoint($mobile-portrait) {
			 font-size:1.2em;
		}
	}

	h5 {
		font-size: 1.28em;
		margin-bottom: 0.8em;
		padding-top: 1.2em;
	}


/* #Basic Styles
================================================== */	
	body {
		font-family:'Raleway',Arial,Sans-Serif;
		font-weight: 400;
		font-size: 100%;
		line-height: 1.3;
		color: #333;
		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
		-webkit-text-size-adjust: 100%;
	
	}

	.quote1, .quote2 {
		font-family:'Arvo',Georgia,Serif;
		font-weight: 400;
		font-style: italic;
	}

	.quote1 {
		font-size: 1.57em;
		line-height: 2em;
		margin-top: .5em;
		margin-bottom: 1em;
		
		@include breakpoint($mobile-portrait) {
			 font-size:1em;
		}
	}

	.quote2 {
		font-size: 1.35em;
		line-height: 1.8em;
		margin-top: -.5em;
		margin-bottom: 1em;
		
		@include breakpoint($mobile-portrait) {
			 font-size:1em;
		}
	}
	

	.buttontext {
		font-family:'Arvo',Georgia,Serif;
		font-weight: 700;
		font-size: 1em;
		text-align: center;
	}
	
	.navtext {
		font-family:'Arvo',Georgia,Serif;
		font-weight: 400;
		font-size: 1em;
	}
	
	
	.infotext, .tourtext, .abouttext, li {
		font-family:'Raleway',Arial,Sans-Serif;
		font-weight: 400;
	}
	
	.infotext {
		font-size: 1.14em;
		line-height: 1.7em;
		
	}
	
	.infotext2{
		font-size: 1.14em;
		line-height: 1.7em;
	}
	
	.tourtext {
		font-size: 1em;
		line-height: 1.7em;
		margin-bottom: .8em;
	}
	
	.abouttext1 {
		font-size: 0.85em;
			li{
			margin-bottom: 0.7em;
			margin-left:12px;
			line-height: 1.286em;
			}
	}
	
	.abouttext2 {
	    font-size: 0.85em;
	    line-height: 1.286em;
	    margin-bottom: 0.7em;
	}    
	
	.white {
		color: white;
	}
	
	.shadow {
		text-shadow: 0px 2px 2px rgba(0,0,0,.8);
	}
	
	.bold {
		font-family:'Raleway',Arial,Sans-Serif;
		font-weight: 700;
	}

	p, span {
		font-family:'Raleway',Arial,Sans-Serif;
		font-weight: 400;
	}
	
	strong {
		font-family:'Raleway',Arial,Sans-Serif;
		font-weight: 700;
	} 
		
	em {
		font-family:'Raleway',Arial,Sans-Serif;
		font-style: italic;
	}
	

/* #Buttons
================================================== */	
.button {
   background-image: -webkit-linear-gradient(top, rgba(215,25,35,1) 0%,rgba(215,25,35,1) 100%);
   background-image:    -moz-linear-gradient(top, rgba(215,25,35,1) 0%,rgba(215,25,35,1) 100%);
   background-image:     -ms-linear-gradient(top, rgba(215,25,35,1) 0%,rgba(215,25,35,1) 100%);
   background-image:      -o-linear-gradient(top, rgba(215,25,35,1) 0%,rgba(215,25,35,1) 100%);
   background-image:         linear-gradient(top, rgba(215,25,35,1) 0%,rgba(215,25,35,1) 100%);
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
   width: 200px;
   padding: 10px;
   display: inline-block;
   text-align: center;
   color: white;			
   text-decoration: none;
}

.button:hover {
   background-image: -webkit-linear-gradient(top, rgba(255,54,67,1) 0%,rgba(215,25,35,1) 100%);
   background-image:    -moz-linear-gradient(top, rgba(255,54,67,1) 0%,rgba(215,25,35,1) 100%);
   background-image:     -ms-linear-gradient(top, rgba(255,54,67,1) 0%,rgba(215,25,35,1) 100%);
   background-image:      -o-linear-gradient(top, rgba(255,54,67,1) 0%,rgba(215,25,35,1) 100%);
   background-image:         linear-gradient(top, rgba(255,54,67,1) 0%,rgba(215,25,35,1) 100%);
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
           box-shadow: none;
   text-decoration: none;
}
	

/* #Misc
================================================== */
	.remove-bottom { margin-bottom: 0 !important; }
	.half-bottom { margin-bottom: 10px !important; }
	.add-bottom { margin-bottom: 20px !important; }
		
@-ms-viewport{
  width: device-width;
}

